added styling and dungeons link

--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tmp.ooo</title>
-
-  <style>
-    a {
-      display: block;
-      margin: 0;
-      padding: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css"/>
 
 </head>
 <body>
-  <a href="https://tmp.ooo/"><code>tmp.ooo</code></a>
-  <a href="https://couchpotatoes.team/"><code>couch potatoes</code></a>
+  <h1>tmp.ooo</h1>
+  <div id="links">
+    <a href="https://couchpotatoes.team/">couch potatoes</a>
+    <br/>
+    <a href="https://dungeons.tmp.ooo/">dungeons</a>
+  </div>
 </body>
 </html>
