added gio's stories

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="links">
     <a href="https://couchpotatoes.team/">couch potatoes</a>
     <a href="https://dungeons.tmp.ooo/">dungeons</a>
+    <a href="https://gio.tmp.ooo/">gio's stories</a>
 
     <p id="blink">tmp.ooo></p>
   </div>
