--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <script src="/scripts/moment.min.js"></script>
   <script src="/scripts/terminal.js"></script>
   <script src="/scripts/commands.js"></script>
+  <script src="/scripts/program.js"></script>
 </body>
 </html>
