--- a/asteroids.html
+++ b/asteroids.html
@@ -15,6 +15,10 @@
 
 
   <script src="/asteroids/vector.js"></script>
+  <script src="/asteroids/Asteroid.js"></script>
+  <script src="/asteroids/Bullet.js"></script>
+  <script src="/asteroids/Particle.js"></script>
+  <script src="/asteroids/Ship.js"></script>
   <script src="/asteroids/gfx.js"></script>
   <script src="/asteroids/index.js"></script>
 </body>
