vector.js file name starts with a capital letter

--- a/asteroids.html
+++ b/asteroids.html
@@ -14,7 +14,7 @@
   </canvas>
 
 
-  <script src="/asteroids/vector.js"></script>
+  <script src="/asteroids/Vector.js"></script>
   <script src="/asteroids/Asteroid.js"></script>
   <script src="/asteroids/Bullet.js"></script>
   <script src="/asteroids/Particle.js"></script>
