--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
   
   <script src="/scripts/moment.min.js"></script>
-  <script src="/scripts/terminal.js"></script>
-  <script src="/scripts/commands.js"></script>
-  <script src="/scripts/program.js"></script>
+  <script type="module" src="index.js"></script>
+
 </body>
 </html>
