--- a/asteroids.html
+++ b/asteroids.html
@@ -13,6 +13,7 @@
 
   </canvas>
 
+  <p id="debug"></p>
 
   <script src="/asteroids/Vector.js"></script>
   <script src="/asteroids/Asteroid.js"></script>
@@ -20,6 +21,9 @@
   <script src="/asteroids/Particle.js"></script>
   <script src="/asteroids/Ship.js"></script>
   <script src="/asteroids/gfx.js"></script>
+  <script src="/asteroids/Camera.js"></script>
+  <script src="/asteroids/Scene.js"></script>
+  <script src="/asteroids/Game.js"></script>
   <script src="/asteroids/index.js"></script>
 </body>
 </html>
