moved index and style to public

--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
   </div>
 
   
-  <script src="/scripts/moment.min.js"></script>
-  <script type="module" src="index.js"></script>
+  <script src="../scripts/moment.min.js"></script>
+  <script type="module" src="../index.js"></script>
 
 </body>
 </html>
