--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tmp.ooo</title>
   <link rel="stylesheet" href="style.css"/>
+  <link rel="icon" type="image/x-icon" href="/public/favicon.ico"/>
 
 </head>
 <body>
@@ -24,8 +25,8 @@
   </div>
 
   
-  <script src="../scripts/moment.min.js"></script>
-  <script type="module" src="../index.js"></script>
+  <script src="scripts/moment.min.js"></script>
+  <script type="module" src="index.js"></script>
 
 </body>
 </html>
