--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
   <link rel="canonical" href="https://tmp.ooo/" />
   <link rel="stylesheet" href="style.css"/>
-  <link rel="icon" type="image/x-icon" href="/public/favicon.ico"/>
-  <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png" />
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
 
 </head>
 <body>
