tons of refactoring, changes classes and ids, moves to an oop terminal

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="terminal__output" id="terminal__output">
     </div>
   
-    <div class="terminal__input">
+    <div class="terminal__input-container" id="terminal__input-container">
       <span>tmp.ooo></span>
-      <form id="form">
-        <label for="terminal-input" style="display:none">.</label>
-        <input type="text" id="terminal-input" spellcheck="false"/>
+      <form id="terminal__input-form">
+        <label for="terminal__input-field" style="display:none">.</label>
+        <input type="text" id="terminal__input-field" spellcheck="false"/>
       </form>
     </div>
   </div>
