--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
   <script src="scripts/moment.min.js"></script>
   <script type="module" src="index.js"></script>
 
+  <script src="/terminal/FragmentTest.js"></script>
+
 </body>
 </html>
